# f1tenth_shield_mppi

./: CMakeLists.txt  README.md  package.xml
config/: r3.params.yaml
include/shield_mppi/: frenet_conversion.h  opponent_detection_node.h
launch/: r3.c.launch.py  r3.launch.py  r3.oo.launch.py  r3.ss.launch.py
maps/: levine_2nd.pgm  levine_2nd.yaml  levine_2nd_obstacles.pgm  levine_2nd_obstacles.yaml
scripts/: opponent_tracking.py  shield_mppi_node.py  spliner.py  state_machine.py
shield_mppi/: collision_checker.py  cost_evaluator.py  dynamics.py  frenet_conversion.py  frenet_conversion_jax.py  state_helpers.py  trajectory_sampler.py  utils.py
src/: frenet_conversion.cpp  opponent_detection_node.cpp
waypoints/: fitted_2.csv
